--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -51,7 +51,7 @@
         <h1>Coupal</h1>
         
         <h2>Your next generation personal smart coupon manager. </h2>
-        <p>COU-PAL is a smart coupon management tool that can be easily installed on your iOS, android devices. Our sophisticated algorithm help you automatically sort, manage and analyze your coupons. With coupal, you can easily enjoy the right coupon at the right place and right time. </p>
+        <p>COU-PAL is a smart coupon management tool that can be easily installed on your iOS and android devices. Our sophisticated algorithm help you automatically sort, manage and analyze your coupons. With coupal, you can easily enjoy the right coupon at the right place and right time. </p>
 
         <div class="contact">Contact Us: <br>
           coupal.co@gmail.com</div>
